tdf#156459: fix WM_UNICHAR implementation

It was implemented in commit c62f48790047014d7d718f949ef6298961100e6f
(INTEGRATION: CWS vcl07 (1.89.2.5.20); FILE MERGED, 2003-04-11), but
handling of non-BMP codepoints was done incorrectly: high surrogate
was calculated, but not used; and SALEVENT_KEYINPUT / SALEVENT_KEYUP
pair used a default value of the SalKeyEvent's mnCharCode. Then the
unused variable, and the macro taking its value, were commented out
in commit fd3e69a1c0d311515eb8db92dd1a72657b405a25 (INTEGRATION: CWS
warnings01 (1.125.6); FILE MERGED, 2006-06-19).

I have no idea if WM_UNICHAR is used in the wild, but *some* sources
suggest that some third-party IMEs could use it [1]; so just fix it.

[1] http://archives.miloush.net/michkap/archive/2012/05/21/10308135.html

Change-Id: I58190afd9fe295e62cb08acaefd32e99c1f383bb
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154996
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>